[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/networking/server_browser.gd" id="1_script"]

[node name="ServerBrowser" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Multiplayer"
horizontal_alignment = 1

[node name="IPInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "IP Address (127.0.0.1)"

[node name="PortInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Port (27015)"

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="DisconnectButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Disconnect"

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Not connected"
horizontal_alignment = 1

[node name="PlayerCountLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Players: 0"
horizontal_alignment = 1
